--- a/src/main/resources/templates/custom-templates/fragment/layout.html
+++ b/src/main/resources/templates/custom-templates/fragment/layout.html
@@ -33,7 +33,7 @@
             <div class="d-flex align-items-center justify-content-between">
                 <div class="logo">
                     <div class="site-logo">
-                        <a th:href="@{#}" class="js-logo-clone">ShopMax</a>
+                        <a th:href="@{/}" class="js-logo-clone">ShopMax</a>
                     </div>
                 </div>
                 <div class="main-nav d-none d-lg-block">
@@ -59,14 +59,14 @@
                             <li><a th:href="@{#}">Catalogue</a></li>
                             <li><a th:href="@{#}">New Arrivals</a></li>
                             <li><a th:href="@{#}">Contact</a></li>
-                            <li>
+                            <li class="has-children active">
                                 <a th:href="@{#}">Login</a>
                                 <ul class="dropdown">
-                                    <li><a th:href="@{#}">Has role admin</a></li>
-                                    <li><a th:href="@{#}">Has role user</a></li>
+                                    <li><a th:href="@{/login}">Admin</a></li>
+                                    <li><a th:href="@{#}">User</a></li>
                                 </ul>
                             </li>
-                            <li><a th:href="@{#}">Logout</a></li>
+                            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -140,9 +140,9 @@
                 <div class="block-5 mb-5">
                     <h3 class="footer-heading mb-4">Contact Info</h3>
                     <ul class="list-unstyled">
-                        <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-                        <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
-                        <li class="email">emailaddress@domain.com</li>
+                        <li class="address">20/59 Mễ Trì, Hà Nội, Việt Nam</li>
+                        <li class="phone"><a href="tel://23923929210">+8435 889 7546</a></li>
+                        <li class="email">nguyenxuantruong96.hust@gmail.com</li>
                     </ul>
                 </div>
 
@@ -160,11 +160,7 @@
         <div class="row pt-5 mt-5 text-center">
             <div class="col-md-12">
                 <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                    All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i>
-                    by <a th:href="@{https://colorlib.com}" target="_blank" class="text-primary">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> by TruongNX
                 </p>
             </div>
         </div>
@@ -172,4 +168,12 @@
 </footer>
 <!--end footer page-->
 </body>
+<script th:src="@{custom-static/js/jquery-3.3.1.min.js}"></script>
+<script th:src="@{custom-static/js/jquery-ui.js}"></script>
+<script th:src="@{custom-static/js/popper.min.js}"></script>
+<script th:src="@{custom-static/js/bootstrap.min.js}"></script>
+<script th:src="@{custom-static/js/owl.carousel.min.js}"></script>
+<script th:src="@{custom-static/js/jquery.magnific-popup.min.js}"></script>
+<script th:src="@{custom-static/js/aos.js}"></script>
+<script th:src="@{custom-static/js/main.js}"></script>
 </html>
