--- a/src/main/resources/templates/custom-templates/index.html
+++ b/src/main/resources/templates/custom-templates/index.html
@@ -1,10 +1,231 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+      layout:decorator="custom-templates/fragment/layout">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Admin Home</title>
 </head>
 <body>
+<div layout:fragment="content">
+<!--    data-aos="fade"-->
+    <div class="site-blocks-cover">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ml-auto order-md-2 align-self-start">
+                    <div class="site-block-cover-content">
+                        <h2 class="sub-title">#New Summer Collection 2019</h2>
+                        <h1>Arrivals Sales</h1>
+                        <p><a th:href="@{#}" class="btn btn-black rounded-0">Shop Now</a></p>
+                    </div>
+                </div>
+                <div class="col-md-6 order-1 align-self-end">
+                    <img th:src="@{custom-static/images/model_3.png}" alt="Image" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="site-section">
+        <div class="container">
+            <div class="title-section mb-5">
+                <h2 class="text-uppercase"><span class="d-block">Discover</span> The Collections</h2>
+            </div>
+            <div class="row align-items-stretch">
+                <div class="col-lg-8">
+                    <div class="product-item sm-height full-height bg-gray">
+                        <a href="#" class="product-category">Women <span>25 items</span></a>
+                        <img th:src="@{custom-static/images/model_4.png}" alt="Image" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="product-item sm-height bg-gray mb-4">
+                        <a href="#" class="product-category">Men <span>25 items</span></a>
+                        <img th:src="@{custom-static/images/model_5.png}" alt="Image" class="img-fluid">
+                    </div>
+
+                    <div class="product-item sm-height bg-gray">
+                        <a href="#" class="product-category">Shoes <span>25 items</span></a>
+                        <img th:src="@{custom-static/images/model_6.png}" alt="Image" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="site-section">
+        <div class="container">
+            <div class="row">
+                <div class="title-section mb-5 col-12">
+                    <h2 class="text-uppercase">Popular Products</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 item-entry mb-4">
+                    <a href="#" class="product-item md-height bg-gray d-block">
+                        <img th:src="@{custom-static/images/prod_2.png}" alt="Image" class="img-fluid">
+                    </a>
+                    <h2 class="item-title"><a href="#">Gray Shoe</a></h2>
+                    <strong class="item-price">$20.00</strong>
+                </div>
+                <div class="col-lg-4 col-md-6 item-entry mb-4">
+                    <a href="#" class="product-item md-height bg-gray d-block">
+                        <img th:src="@{custom-static/images/prod_3.png}" alt="Image" class="img-fluid">
+                    </a>
+                    <h2 class="item-title"><a href="#">Blue Shoe High Heels</a></h2>
+                    <strong class="item-price"><del>$46.00</del> $28.00</strong>
+                </div>
+
+                <div class="col-lg-4 col-md-6 item-entry mb-4">
+                    <a href="#" class="product-item md-height bg-gray d-block">
+                        <img th:src="@{custom-static/images/model_5.png}" alt="Image" class="img-fluid">
+                    </a>
+                    <h2 class="item-title"><a href="#">Denim Jacket</a></h2>
+                    <strong class="item-price"><del>$46.00</del> $28.00</strong>
+
+                    <div class="star-rating">
+                        <span class="icon-star2 text-warning"></span>
+                        <span class="icon-star2 text-warning"></span>
+                        <span class="icon-star2 text-warning"></span>
+                        <span class="icon-star2 text-warning"></span>
+                        <span class="icon-star2 text-warning"></span>
+                    </div>
+
+                </div>
+                <div class="col-lg-4 col-md-6 item-entry mb-4">
+                    <a href="#" class="product-item md-height bg-gray d-block">
+                        <img th:src="@{custom-static/images/prod_1.png}" alt="Image" class="img-fluid">
+                    </a>
+                    <h2 class="item-title"><a href="#">Leather Green Bag</a></h2>
+                    <strong class="item-price"><del>$46.00</del> $28.00</strong>
+                    <div class="star-rating">
+                        <span class="icon-star2 text-warning"></span>
+                        <span class="icon-star2 text-warning"></span>
+                        <span class="icon-star2 text-warning"></span>
+                        <span class="icon-star2 text-warning"></span>
+                        <span class="icon-star2 text-warning"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 item-entry mb-4">
+                    <a href="#" class="product-item md-height bg-gray d-block">
+                        <img th:src="@{custom-static/images/model_1.png}" alt="Image" class="img-fluid">
+                    </a>
+                    <h2 class="item-title"><a href="#">Smooth Cloth</a></h2>
+                    <strong class="item-price"><del>$46.00</del> $28.00</strong>
+                </div>
+                <div class="col-lg-4 col-md-6 item-entry mb-4">
+                    <a href="#" class="product-item md-height bg-gray d-block">
+                        <img th:src="@{custom-static/images/model_7.png}" alt="Image" class="img-fluid">
+                    </a>
+                    <h2 class="item-title"><a href="#">Yellow Jacket</a></h2>
+                    <strong class="item-price">$58.00</strong>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="site-section">
+        <div class="container">
+            <div class="row">
+                <div class="title-section text-center mb-5 col-12">
+                    <h2 class="text-uppercase">Most Rated</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 block-3">
+                    <div class="nonloop-block-3 owl-carousel">
+                        <div class="item">
+                            <div class="item-entry">
+                                <a href="#" class="product-item md-height bg-gray d-block">
+                                    <img th:src="@{custom-static/images/model_1.png}" alt="Image" class="img-fluid">
+                                </a>
+                                <h2 class="item-title"><a href="#">Smooth Cloth</a></h2>
+                                <strong class="item-price"><del>$46.00</del> $28.00</strong>
+                                <div class="star-rating">
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-entry">
+                                <a href="#" class="product-item md-height bg-gray d-block">
+                                    <img th:src="@{custom-static/images/prod_3.png}" alt="Image" class="img-fluid">
+                                </a>
+                                <h2 class="item-title"><a href="#">Blue Shoe High Heels</a></h2>
+                                <strong class="item-price"><del>$46.00</del> $28.00</strong>
+
+                                <div class="star-rating">
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-entry">
+                                <a href="#" class="product-item md-height bg-gray d-block">
+                                    <img th:src="@{custom-static/images/model_5.png}" alt="Image" class="img-fluid">
+                                </a>
+                                <h2 class="item-title"><a href="#">Denim Jacket</a></h2>
+                                <strong class="item-price"><del>$46.00</del> $28.00</strong>
+
+                                <div class="star-rating">
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-entry">
+                                <a href="#" class="product-item md-height bg-gray d-block">
+                                    <img th:src="@{custom-static/images/prod_1.png}" alt="Image" class="img-fluid">
+                                </a>
+                                <h2 class="item-title"><a href="#">Leather Green Bag</a></h2>
+                                <strong class="item-price"><del>$46.00</del> $28.00</strong>
+                                <div class="star-rating">
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-entry">
+                                <a href="#" class="product-item md-height bg-gray d-block">
+                                    <img th:src="@{custom-static/images/model_7.png}" alt="Image" class="img-fluid">
+                                </a>
+                                <h2 class="item-title"><a href="#">Yellow Jacket</a></h2>
+                                <strong class="item-price">$58.00</strong>
+                                <div class="star-rating">
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                    <span class="icon-star2 text-warning"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
